# postgres

./: .gitignore  configure  configure.in
contrib/: Makefile  meson.build
contrib/auto_explain/: auto_explain.c
contrib/bdr/: bdr--0.1.sql  bdr--0.5.sql  bdr.c  bdr.conf  bdr.h  bdr_apply.c  bdr_commandfilter.c  bdr_count.c  bdr_seq.c  worker.mk
contrib/otel/: Makefile  meson.build  otel.c  otel.h  otel_api.c  otel_api.h  otel_internal.h  otel_log.c  otel_trace.c
contrib/otel/t/: 001_otel.pl
contrib/otel_demo_exporter/: otel_demo_exporter.c
contrib/otel_demo_exporter/t/: 001_file_exporter.pl
contrib/pgbench/: pgbench.c
contrib/pglogical_output/: README.md
contrib/test_decoding/: Makefile  test_decoding.c  test_decoding.control
contrib/test_decoding/expected/: ddl.out  delayed_startup.out  mxact.out  permissions.out  replorigin.out  rewrite.out  sequence.out  toast.out
contrib/test_decoding/specs/: delayed_startup.spec  mxact.spec
contrib/test_decoding/sql/: ddl.sql  permissions.sql  replorigin.sql  rewrite.sql  sequence.sql  toast.sql
contrib/test_logical_decoding/: Makefile  test_logical_decoding.c
contrib/test_logical_decoding/expected/: ddl.out  delayed_startup.out  mxact.out  rewrite.out  toast.out
contrib/test_logical_decoding/specs/: delayed_startup.spec  mxact.spec
contrib/test_logical_decoding/sql/: ddl.sql  rewrite.sql  toast.sql
doc/src/sgml/: array.sgml  auto-explain.sgml  backup.sgml  bgworker.sgml  brin.sgml  catalogs.sgml  changesetextraction.sgml  client-auth.sgml  config.sgml  contrib.sgml  datatype.sgml  ddl.sgml  diskusage.sgml  dml.sgml  errcodes.sgml  event-trigger.sgml  example-worker-spi.sgml  extend.sgml  features.sgml  filelist.sgml  func.sgml  gin.sgml  gist.sgml  high-availability.sgml  indices.sgml  information_schema.sgml  install-windows.sgml  json.sgml  keywords.sgml  libpq.sgml  lobj.sgml  logicaldecoding.sgml  maintenance.sgml  manage-ag.sgml  monitoring.sgml  mvcc.sgml  perform.sgml  pglogical-output.sgml  plpgsql.sgml  plpython.sgml  (+26 more)
src/: Makefile.global.in
src/backend/catalog/: Makefile  dependency.c  heap.c  index.c  objectaddress.c  pg_rowsecurity.c  system_views.sql
src/backend/commands/: analyze.c  cluster.c  copy.c  dbcommands.c  event_trigger.c  tablecmds.c  vacuum.c  vacuumlazy.c  view.c
src/backend/executor/: execMain.c  execQual.c  nodeModifyTable.c
src/backend/libpq/: Makefile  auth.c  hba.c  meson.build  protocol_headers.c
src/backend/main/: main.c
src/backend/nodes/: copyfuncs.c  equalfuncs.c  makefuncs.c  nodeFuncs.c  outfuncs.c  readfuncs.c
src/backend/parser/: analyze.c  gram.y  parse_agg.c  parse_expr.c  parse_func.c
src/backend/port/: .gitignore  Makefile  unix_crashdump.c  win32_crashdump.c
src/backend/postmaster/: autovacuum.c  postmaster.c
src/backend/replication/: basebackup.c  (+7 more)
src/include/: fmgr.h  miscadmin.h  pgstat.h  postgres.h
src/port/: open.c
src/test/modules/libpq_headers/: Makefile  libpq_headers.c  meson.build
src/test/modules/libpq_headers/t/: 001_libpq_headers.pl
src/test/modules/test_protocol_headers/: Makefile  meson.build  test_protocol_headers.c
src/test/modules/test_protocol_headers/t/: 001_headers.pl
(+165 files in other folders)
